# TaverenOS

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BUILD_PLAN.md  DEVELOPMENT.md
src/taverenos/: __init__.py
src/taverenos/automation/: __init__.py
src/taverenos/compression/: __init__.py
src/taverenos/core/: __init__.py  knowledge_base.py  recursive_engine.py
src/taverenos/diagnostics/: __init__.py
taverenos/: __init__.py  __main__.py  processor.py
tests/: conftest.py  test_knowledge_base.py  test_recursive_engine.py
